# tmt-translation-sdk

./: README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: examples.md  sentence-normalization.md  usage.md
src/tmt_translation_sdk/: __init__.py  client.py  exceptions.py  models.py  text.py
tests/: test_client.py
