[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "tmt-translation-sdk"
version = "0.1.0"
description = "Python SDK for the Google TMT Translation API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27,<1",
]
keywords = ["translation", "nepali", "tamang", "sdk", "google-tmt"]
authors = [
  { name = "Copilot" },
]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://tmt.ilprl.ku.edu.np/lang-translate"

[tool.hatch.build.targets.wheel]
packages = ["src/tmt_translation_sdk"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
